factored out midi note mappings;added load-song*